--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles.css">
     <title>Landing Page</title>
 </head>
+
 <body>
+    <div class="top">
     <div class="header">
         <p class="logo">Header Logo</p>
         <div class="links">
@@ -15,7 +18,17 @@
             <a href="#">Link three</a>
         </div>
     </div>
-    <div class="hero-container">
+        <div class="hero-container">
+            <div class="hero-text-div">
+                <p class="hero">This Website is awesome</p>
+                <p class="hero-subtext">This webiste has some subtext that goes
+                    here under the main title. It's a smaller font and the color
+                    is lower contrast.</p>
+                <button>Sign up</button>
+            </div>
+            <img src="images/mountains.jpg" alt="Picture of mountains">
+
+        </div>
     </div>
     <div class="radom-container">
     </div>
@@ -27,4 +40,5 @@
         <p>Copyright &copy; The Odin Project 2021</p>
     </div>
 </body>
+
 </html>
