Finish part with projects

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
         <div class="hero-container">
             <div class="hero-text-div">
-                <p class="hero">This Website is awesome</p>
+                <h1 class="hero">This Website is awesome</p>
                 <p class="hero-subtext">This webiste has some subtext that goes
                     here under the main title. It's a smaller font and the color
                     is lower contrast.</p>
@@ -31,8 +31,33 @@
         </div>
     </div>
     <div class="radom-container">
+        <h2 class="information-header">Some random information.</h2>
+        <div class="projects-container">
+            <div class="project">
+                <div class="image"></div>
+                <p class="img-subtext">this is some subtext under an illustration or image</p>
+            </div>
+            <div class="project">
+                <div class="image"></div>
+                <p class="img-subtext">this is some subtext under an illustration or image</p>
+            </div>
+            <div class="project">
+                <div class="image"></div>
+                <p class="img-subtext">this is some subtext under an illustration or image</p>
+            </div>
+            <div class="project">
+                <div class="image"></div>
+                <p class="img-subtext">this is some subtext under an illustration or image</p>
+            </div>
+        </div>
     </div>
     <div class="quote-container">
+        <blockquote>
+            This is an ispiring quote, or a testimonial from a customer. 
+            Maybe it's just filling up space, or maybe people will actually read it.
+            Who knows? All I know is that it looks nice.
+        </blockquote>
+        <figcaption>The god of Thunder</figcaption>
     </div>
     <div class="signup-container">
     </div>
