--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
     </div>
     <div class="quote-container">
         <blockquote>
-            This is an ispiring quote, or a testimonial from a customer. 
+            This is an inspiring quote, or a testimonial from a customer. 
             Maybe it's just filling up space, or maybe people will actually read it.
             Who knows? All I know is that it looks nice.
         </blockquote>
-        <figcaption>The god of Thunder</figcaption>
+        <p class="name">- The god of Thunder</p>
     </div>
     <div class="signup-container">
     </div>
