Finish call to action

--- a/index.html
+++ b/index.html
@@ -60,6 +60,11 @@
         <p class="name">- The god of Thunder</p>
     </div>
     <div class="signup-container">
+        <div class="call-action">
+            <h3>Call to action! It's time!</h3>
+            <p>Sign up for our product by clicking that button right over there!</p>
+        </div>
+        <button>Sign up</button>
     </div>
     <div class="footer">
         <p>Copyright &copy; The Odin Project 2021</p>
